[gd_scene load_steps=12 format=2]

[ext_resource path="res://challenges/week10/scenes/map/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://challenges/week10/scenes/character/character.tscn" type="PackedScene" id=2]
[ext_resource path="res://challenges/week10/scenes/main.gd" type="Script" id=3]
[ext_resource path="res://challenges/week10/scenes/finish/finish.tscn" type="PackedScene" id=4]
[ext_resource path="res://common/gfx/background/country_bg.webp" type="Texture" id=5]
[ext_resource path="res://challenges/week10/scenes/timer/timer.tscn" type="PackedScene" id=6]
[ext_resource path="res://challenges/week10/scenes/bestTimes/best_times.tscn" type="PackedScene" id=7]
[ext_resource path="res://common/scenes/finishGame.tscn" type="PackedScene" id=8]
[ext_resource path="res://challenges/week10/scenes/trafficLight/traffic_light.tscn" type="PackedScene" id=9]
[ext_resource path="res://common/sfx/win/615099__mlaudio__magic-game-win-success.wav" type="AudioStream" id=10]
[ext_resource path="res://common/sfx/win/finish_521640__fupicat__winbanjo.ogg" type="AudioStream" id=11]

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_offset = Vector2( 1, 0 )
motion_mirroring = Vector2( 1024, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 5 )
centered = false

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="finish" parent="." instance=ExtResource( 4 )]
position = Vector2( 7760, 392 )

[node name="obstacles" type="Node2D" parent="."]

[node name="character" parent="." instance=ExtResource( 2 )]
position = Vector2( 92, 538 )

[node name="finishGame" parent="." instance=ExtResource( 8 )]
offset = Vector2( 0, 210 )
transform = Transform2D( 1, 0, 0, 1, 0, 210 )

[node name="timer" parent="." instance=ExtResource( 6 )]
offset = Vector2( 320, 100 )
transform = Transform2D( 1, 0, 0, 1, 320, 100 )

[node name="best_times" parent="." instance=ExtResource( 7 )]
offset = Vector2( 410, 180 )
transform = Transform2D( 1, 0, 0, 1, 410, 180 )

[node name="traffic_light" parent="." instance=ExtResource( 9 )]
position = Vector2( 431, 222 )

[node name="RaceFinishedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="NewRecordSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="area_entered" from="finish" to="character" method="_on_finish_area_entered"]
[connection signal="first_pressed" from="character" to="." method="_on_character_first_pressed" flags=6]
[connection signal="race_finished" from="character" to="." method="_on_character_race_finished"]
[connection signal="started" from="traffic_light" to="." method="_on_traffic_light_started"]
